fix(skill-list): Fix alignment of skills list on skills page
- add div component.
- add display property to div class

[Fixes #149843684]

--- a/src/app/pages/admin/skills/admin-skills.component.scss
+++ b/src/app/pages/admin/skills/admin-skills.component.scss
@@ -77,6 +77,9 @@ md-card {
   padding: 0 10px;
 }
 
+.content-wrapper {
+  display: block;
+}
 /**
  *
  * tablet
